# dolar-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily-dolar-pipeline.yml
docs/: globaz_pitch.md
src/dolar_pipeline/: __init__.py  cli.py  client.py  config.py  database.py  logging_utils.py  models.py  report.py
tests/: test_database.py  test_models.py
