[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dolar-pipeline"
version = "0.1.0"
description = "Pipeline automatizado para capturar cotizaciones del dolar argentino desde DolarAPI."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Antonio Garcia Bidart" }]

[project.scripts]
dolar-pipeline = "dolar_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
